endpoint for get all node resource info
